--- a/arch/arm/configs/cyanogenmod_cooper_defconfig
+++ b/arch/arm/configs/cyanogenmod_cooper_defconfig
@@ -1603,7 +1603,7 @@ CONFIG_FB_MSM=y
 CONFIG_FB_MSM_LOGO=y
 CONFIG_FB_MSM_SEC_BOOTLOGO=y
 CONFIG_FB_MSM_LCDC_HW=y
-CONFIG_FB_MSM_TRIPLE_BUFFER=y
+# CONFIG_FB_MSM_TRIPLE_BUFFER is not set
 # CONFIG_FB_MSM_MDP22 is not set
 CONFIG_FB_MSM_MDP30=y
 # CONFIG_FB_MSM_MDP31 is not set
