--- a/arch/arm/configs/cyanogenmod_gio_defconfig
+++ b/arch/arm/configs/cyanogenmod_gio_defconfig
@@ -38,7 +38,7 @@ CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-jellybean"
+CONFIG_LOCALVERSION="-ics"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -1603,7 +1603,7 @@ CONFIG_FB_MSM=y
 CONFIG_FB_MSM_LOGO=y
 CONFIG_FB_MSM_SEC_BOOTLOGO=y
 CONFIG_FB_MSM_LCDC_HW=y
-CONFIG_FB_MSM_TRIPLE_BUFFER=y
+#CONFIG_FB_MSM_TRIPLE_BUFFER is not set
 # CONFIG_FB_MSM_MDP22 is not set
 CONFIG_FB_MSM_MDP30=y
 # CONFIG_FB_MSM_MDP31 is not set
