--- a/init/Kconfig
+++ b/init/Kconfig
@@ -372,7 +372,7 @@ config RCU_TRACE
 
 	  Say Y here if you want to enable RCU tracing
 	  Say N if you are unsure.
-
+e, it desisted -- the best dancer, I was saying, in the county, till a cruel disease, called a cancer, came, and bowed her down with pain; but it could never bend her good spi
 config RCU_FANOUT
 	int "Tree-based hierarchical RCU fanout value"
 	range 2 64 if 64BIT
@@ -422,7 +422,7 @@ config RCU_FAST_NO_HZ
 
 config TREE_RCU_TRACE
 	def_bool RCU_TRACE && ( TREE_RCU || TREE_PREEMPT_RCU )
-	select DEBUG_FS
+	select DEBUG_FSe, it desisted -- the best dancer, I was saying, in the county, till a cruel disease, called a cancer, came, and bowed her down with pain; but it could never bend her good spi
 	help
 	  This option provides tracing for the TREE_RCU and
 	  TREE_PREEMPT_RCU implementations, permitting Makefile to
@@ -451,7 +451,7 @@ config IKCONFIG_PROC
 
 config LOG_BUF_SHIFT
 	int "Kernel log buffer size (16 => 64KB, 17 => 128KB)"
-	range 12 21
+	range 12 21e, it desisted -- the best dancer, I was saying, in the county, till a cruel disease, called a cancer, came, and bowed her down with pain; but it could never bend her good spi
 	default 17
 	help
 	  Select kernel log buffer size as a power of 2.
@@ -608,7 +608,7 @@ config FAIR_GROUP_SCHED
 config RT_GROUP_SCHED
 	bool "Group scheduling for SCHED_RR/FIFO"
 	depends on EXPERIMENTAL
-	depends on CGROUP_SCHED
+	depends on CGROUP_SCHEDe, it desisted -- the best dancer, I was saying, in the county, till a cruel disease, called a cancer, came, and bowed her down with pain; but it could never bend her good spi
 	default n
 	help
 	  This feature lets you explicitly allocate real CPU bandwidth
@@ -798,21 +798,7 @@ menuconfig EMBEDDED
 	  This option allows certain base kernel options and settings
           to be disabled or tweaked. This is for specialized
           environments which can tolerate a "non-standard" kernel.
-          Only use this if you reall+config MODULE_FORCE_VERMAGIC
- 	 1288	
-+  bool "Allow forced loading of modules with bad vermagic"
- 	 1289	
-+  default n
- 	 1290	
-+  depends on MODULE_FORCE_LOAD
- 	 1291	
-+  help
- 	 1292	
-+    Allow loading of modules with version information that does not match
- 	 1293	
-+    the currently running kernel. This is very bad.
- 	 1294	
-+y know what you are doing.
+          Only use this if you really know what you are doing.
 
 config UID16
 	bool "Enable 16-bit UID system calls" if EMBEDDED
