--- a/arch/arm/configs/gluon_beni_defconfig
+++ b/arch/arm/configs/gluon_beni_defconfig
@@ -62,6 +62,10 @@ CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_BSD_PROCESS_ACCT is not set
 # CONFIG_TASKSTATS is not set
 # CONFIG_AUDIT is not set
+CONFIG_CLEANCACHE=y
+CONFIG_ZRAM=y
+CONFIG_ZCACHE=y
+CONFIG_SWAP=y
 
 #
 # RCU Subsystem
