--- a/arch/arm/configs/gluon_beni_defconfig
+++ b/arch/arm/configs/gluon_beni_defconfig
@@ -460,7 +460,8 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_LIONHEART=y
+#CONFIG_CPU_FREQ_GOV_LIONHEART is not set
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
 # CONFIG_CPU_FREQ_GOV_SMARTASS is not set
 # CONFIG_CPU_FREQ_GOV_SMARTASS2 is not set
